--- a/package.json
+++ b/package.json
@@ -2,8 +2,22 @@
   "name": "autofill-client",
   "version": "0.1.0",
   "description": "Web client to create autofill requests and connect to autofill-daemon",
-  "main": "index.js",
+  "module": "src/main.js",
+  "main": "src/index.js",
   "repository": "git@github.com:simpledealer/autofill-client.git",
   "author": "r44j <raaj.ahab@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@meltwater/phi": "^4.1.0",
+    "@simple-dealer/asset-life-cycle": "^1.6.0",
+    "axios": "^0.23.0",
+    "date-fns": "^2.25.0",
+    "esm": "^3.2.25",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ava": "^3.15.0",
+    "nyc": "^15.1.0",
+    "standard": "^16.0.4"
+  }
 }
