--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "ava": "^3.15.0",
     "nyc": "^15.1.0",
     "standard": "^16.0.4"
+  },
+  "scripts": {
+    "lint": "standard",
+    "test": "yarn run lint; ava",
+    "report": "yarn run lint;nyc --reporter=html --reporter=text ava"
   }
 }
