--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autofill-puppeteer-client",
+  "name": "@simple-dealer/autofill-puppeteer-client",
   "version": "0.1.0",
   "description": "Web client to create autofill requests and connect to autofill-daemon",
   "module": "src/main.js",
