Add latest daemon download when downloadAutofillDaemon is called

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.23.0",
     "date-fns": "^2.25.0",
     "esm": "^3.2.25",
+    "js-yaml": "^4.1.0",
     "ramda": "^0.27.1",
     "uuid": "^8.3.2"
   },
